# snort

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  README.md  RELEASE.NOTES  aclocal.m4  config.h.in  configure  configure.in  configure.sh  snort.8
contrib/: Makefile.in
doc/: CREDITS  INSTALL  Makefile.am  Makefile.in  PROBLEMS  README  README.GTP  README.PerfProfiling  README.SMTP  README.WIN32  README.active  README.asn1  README.counts  README.dcerpc2  README.file  README.flowbits  README.frag3  README.http_inspect  README.imap  README.multipleconfigs  README.normalize  README.pop  README.reload  README.reputation  README.sip  README.unified2  USAGE  WISHLIST  faq.tex  snort_manual.tex
etc/: Makefile.am  Makefile.in  gen-msg.map  reference.config  snort.conf
m4/: Makefile.in
preproc_rules/: Makefile.in  decoder.rules  preprocessor.rules
rpm/: Makefile.in  README.build_rpms  README.rpms  generate-all-rpms  rpm_buid.sh  snort.spec  snortd.service
src/: .gitignore  Makefile.am  Makefile.in  active.c  active.h  build.h  byte_extract.c  byte_extract.h  checksum.h  cpuclock.h  debug.c  decode.c  decode.h  detect.c  detect.h  detection_filter.c  detection_util.c  (+75 more)
src/file-process/: Makefile.am  Makefile.in  file_api.h  file_mail_common.h  file_mime_config.c  file_mime_config.h  file_mime_process.c  file_mime_process.h  file_resume_block.c  file_resume_block.h  file_service.c  file_service.h  file_service_config.c  file_service_config.h
src/file-process/libs/: Makefile.am  Makefile.in  file_config.c  file_config.h  file_identifier.c  file_identifier.h  file_lib.c  file_lib.h  file_sha256.c  file_sha256.h
tools/control/: Makefile.am  Makefile.in  sfcontrol.c  snort_control_reload.c  snort_dump_packets.c  snort_reload_iplist.c
(+705 files in other folders)
